--- a/sentimentanalysis.ipynb
+++ b/sentimentanalysis.ipynb
@@ -20,7 +20,7 @@
     "nltk.download('punkt')\n",
     "nltk.download('stopwords')\n",
     "\n",
-    "# Load the IMDb movie reviews dataset (replace with the path to your dataset)\n",
+    "# Load the IMDb movie reviews dataset (replace with the path to  dataset)\n",
     "# The dataset should have two columns: \"review\" and \"sentiment\"\n",
     "df = pd.read_csv('imdb_reviews.csv')\n",
     "\n",
